--- a/05-01/package.json
+++ b/05-01/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,9 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+	"babel-loader": "6.2.5",
+	"webpack": "^1.13.2",
+	"webpack-dev-server": "^1.16.1"
   }
 }
