--- a/11-02/package.json
+++ b/11-02/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "root.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	  "build": "webpack",
+      "start" : "webpack-dev-server --contentbase src --inline --hot"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "babelify": "^7.3.0",
     "css-loader": "^0.25.0",
     "json-loader": "^0.5.4",
+	"babel-loader": "6.2.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-mixin": "^2.0.2",
