--- a/19-03/package.json
+++ b/19-03/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "root.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "build": "webpack",
+      "start": "webpack-dev-server --contentbase src --inline --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "antd": "^2.1.0",
+	"babel-loader": "6.2.5",
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
