--- a/react-router-4_webpack-2/package.json
+++ b/react-router-4_webpack-2/package.json
@@ -5,7 +5,7 @@
   "main": "root.js",
   "scripts": {
       "build": "webpack",
-      "start": "webpack-dev-server"
+      "start": "webpack-dev-server --hot --inline",
   },
   "author": "",
   "license": "ISC",
